--- a/src/app/layout/about/about.component.html
+++ b/src/app/layout/about/about.component.html
@@ -4,7 +4,7 @@
     <div class="overlay-main bg-black opacity-07"></div>
     <div class="container">
         <div class="mt-bnr-inr-entry">
-            <h1 class="text-white">A Propos de nous!</h1>
+            <h1 class="text-white">A Propos de Nous!</h1>
             <!-- Breadcrumb -->                            
             <ul class="mt-breadcrumb breadcrumb-style-1">
                 <li><a href="/">Accueil</a></li>
