--- a/src/app/layout/about/what-we-do/what-we-do.component.html
+++ b/src/app/layout/about/what-we-do/what-we-do.component.html
@@ -15,23 +15,37 @@
                     <span
                         class="site-text-primary display-block title-second text-uppercase font-20 font-weight-600 display-block m-b15">{{_data.title}}</span>
                     <h2 class="m-t0">{{_data.subtitle}}</h2>
-                    <p>{{_data.description}}</p>
-                    <p>
-                        La Smaco DRC Sarlu est une entreprise de BTP établie en République Démocratique du Congo 
-                        depuis 2018. La Smaco DRC est actuellement dirigée par Monsieur Bill Branson TAFU, 
-                        son Président Directeur Général Statutaire.
-                     </p>
-                     <p>
-                        Etablie en République Démocratique du Congo avec des branches dans les villes de Kinshasa, 
-                        Lubumbashi, Kolwezi, Kananga, Bukavu, Goma, Matadi pour répondre aux besoins quotidiens 
-                        de la nation congolaise avec plusieurs gammes des services et produits.
-                     </p>
-                     <p>
-                        Nous offrons plusieurs services depuis nos divers départements comme la construction générale, 
-                        la décoration, la vente des matériaux, location des matériels, l'aménagement paysager etc. 
-                        Nous disposons d'un personnel composé des architectes, des ingenieurs et formateurs qualifiés. 
-                        Nos services s'étendent sur tout le territoire de la République Démocratique du Congo.
-                     </p>
+                     
+                    <!-- <p class="text-justify">{{_data.description}}</p> -->
+                    
+                    <p class="">
+                        La société <strong>« 3S-Security »</strong> est spécialisée dans la sécurité des personnes et des biens. 
+                        <br>
+                        <br> 
+                        Elle exerce dans des secteurs variés tel que: Gardiennage et Surveillance, Protection rapprochée, Événementiel, Accompagnement, Hôtesses, Contrôle d’accès, Télésurveillance & les systèmes d’alarmes. 
+                        <br>
+                        <br> 
+                        Nous organisons et remplissons tous les types de missions allant de la protection rapprochée des personnalités jusqu’au gardiennage, en passant par la sécurité événementielle (cérémonies ou réceptions) et la surveillance de points sensibles. Notre mot d’ordre est: « Protéger, Prévenir, Préserver », car notre premier travail est d’anticiper tout type de danger et être prêt à réagir. 
+                        <br>
+                        <br> 
+                        Ensuite, nous avons pour mission de calmer la situation et de garder le contrôle: veillez à l’ordre. Pour y arriver, il nous est très important, voir une obligation, de passer au préalable par un audit des besoins du clients en hommes, équipements ainsi qu’une visite d’inspection sur les lieux concernés. 
+                        <br> 
+                        <br>
+                        Ces audits sont menés par nos cadres hautement spécialisés qui conseillent et détermineront les mesures et les dispositifs à prendre afin de répondre plus efficacement aux besoins et objectifs fixés. 
+                        Afin de répondre efficacement aux besoins du clients et satisfaire ses demandes, 3S-Security met un accent particulier sur la formation de son personnel.
+                        <br> 
+                        <br>
+                        Pour vos événements ponctuels et vos besoins quotidiens, nos équipes sont uniquement constituées de professionnels. 
+                        <br> 
+                        <br>
+                        Qu’ils soient spécialistes de la protection rapprochée, maîtres chien, agents de sécurité, d’accueil ou voituriers, hommes ou femmes, nos agents sont parfaitement aptes à répondre à l’ensemble des missions que vous nous confiez: public ou privé. 
+                        <br> 
+                        <br>
+                        Quels que soient vos besoins, 3S-Security répondra à vos demandes avec efficacité et sans faille. 
+                        <br> 
+                        <br>
+                        Nos équipes opèrent 24h/24 et 7jrs/7 dans la rapidité et l’efficacité.
+                    </p>
                     <!-- <a href="page/about-us" class="site-button">En savoir plus</a> -->
                 </div>
             </div>
