--- a/src/app/layout/common/header-nav/header-nav.component.html
+++ b/src/app/layout/common/header-nav/header-nav.component.html
@@ -8,9 +8,9 @@
     <li routerLinkActive="active">
         <a routerLink="/web/services">Services</a> 
     </li>
-    <li routerLinkActive="active">
+    <!-- <li routerLinkActive="active">
         <a routerLink="/web/blogs">Blogs</a> 
-    </li>
+    </li> -->
     <li routerLinkActive="active">
         <a routerLink="/web/contact">Contact</a> 
     </li>
