--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,7 +1,10 @@
 <div class="page-wraper">
 
     <!-- HEADER START -->
-    <app-header></app-header>
+     <div class="sticky-header">
+        <app-header></app-header>
+     </div>
+
 
     <!-- Content Mid part-->
     <div class="page-content">
@@ -14,6 +17,6 @@
     <app-footer></app-footer>
 
     <!-- Scroll Top Button -->
-    <button class="scroltop"><span class="fa fa-space-shuttle relative" id="btn-vibrate"></span></button>
+    <button class="scroltop"><span class="fa fa-arrow-up relative" id="btn-vibrate"></span></button>
 </div>
 
