mode operatoire remove it

--- a/src/app/layout/serv/serv.component.html
+++ b/src/app/layout/serv/serv.component.html
@@ -15,10 +15,8 @@
 </div>
 
 
-<div class="section-full  bg-gray p-t80 p-b50">
-    <div class="container">
-
-        <!-- TITLE START-->
+<!-- <div class="section-full  bg-gray p-t80 p-b50">
+    <div class="container"> 
         <div class="section-head text-center">
             <h2 data-title="Explore">{{_explore.title}}</h2>
             <div class="mt-separator-outer">
@@ -26,8 +24,7 @@
             </div>
 
             <p>{{_explore.subtitle}}</p>
-        </div>
-        <!-- TITLE END-->
+        </div> 
         <div class="section-content">
             <div class="row d-flex justify-content-center">
 
@@ -48,7 +45,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <!-- Nos Services -->
 <app-service-item [_data]="_data"></app-service-item>
