--- a/src/app/layout/about/what-we-do/what-we-do.component.html
+++ b/src/app/layout/about/what-we-do/what-we-do.component.html
@@ -32,7 +32,7 @@
                         <br> 
                         <br>
                         Ces audits sont menés par nos cadres hautement spécialisés qui conseillent et détermineront les mesures et les dispositifs à prendre afin de répondre plus efficacement aux besoins et objectifs fixés. 
-                        Afin de répondre efficacement aux besoins du clients et satisfaire ses demandes, 3S-Security met un accent particulier sur la formation de son personnel.
+                        Afin de répondre efficacement aux besoins du clients et satisfaire ses demandes, 3S-Security sarl met un accent particulier sur la formation de son personnel.
                         <br> 
                         <br>
                         Pour vos événements ponctuels et vos besoins quotidiens, nos équipes sont uniquement constituées de professionnels. 
@@ -41,7 +41,7 @@
                         Qu’ils soient spécialistes de la protection rapprochée, maîtres chien, agents de sécurité, d’accueil ou voituriers, hommes ou femmes, nos agents sont parfaitement aptes à répondre à l’ensemble des missions que vous nous confiez: public ou privé. 
                         <br> 
                         <br>
-                        Quels que soient vos besoins, 3S-Security répondra à vos demandes avec efficacité et sans faille. 
+                        Quels que soient vos besoins, 3S-Security sarl répondra à vos demandes avec efficacité et sans faille. 
                         <br> 
                         <br>
                         Nos équipes opèrent 24h/24 et 7jrs/7 dans la rapidité et l’efficacité.
