--- a/src/app/layout/common/footer/footer.component.html
+++ b/src/app/layout/common/footer/footer.component.html
@@ -13,7 +13,7 @@
                                     alt="" /></a>
                         </div>
                         <p>
-                            3s-security est une entreprise de sécurité privée qui offre des services de gardinanage, 
+                            3s-security sarl est une entreprise de sécurité privée qui offre des services de gardinanage, 
                             de télésurveillance et des système d’alarmes.
                         </p>
                         <ul>
@@ -41,8 +41,8 @@
                             <li><a routerLink="/web/about">À propos de nous</a></li>
                             <li><a routerLink="/web/teams">Notre équipe</a></li>
                             <li><a routerLink="/web/services">Nos Services</a></li>
-                            <li><a routerLink="/web/blog/blog-list">Notre Blog</a></li>
-                            @if (authService.isAuthentification()) {
+                            <!-- <li><a routerLink="/web/blog/blog-list">Notre Blog</a></li> -->
+                            <!-- @if (authService.isAuthentification()) {
                             <li>
                                 <a routerLink="/@admin">Admin</a>
                             </li>
@@ -56,7 +56,7 @@
                                 <a routerLink="/auth/login">Connexion</a>
                             </li>
 
-                            }
+                            } -->
                         </ul>
                     </div>
                 </div>
@@ -126,11 +126,10 @@
         <div class="container p-t30">
 
             <div class="mt-footer-bot-center">
-                <span class="copyrights-text">© {{year}} 3S-SECURITY. All Rights Reserved. Designed By <a
+                <span class="copyrights-text">©{{year}}- 3S-SECURITY SARL. All Rights Reserved. Designed By <a
                         routerLink="https://ictech-dev.com" target="_blank"
                         rel="Innovation and Creativity Technology">ICTECH</a></span>
             </div>
-
         </div>
     </div>
 </footer>
