--- a/src/app/layout/about/about.component.html
+++ b/src/app/layout/about/about.component.html
@@ -8,7 +8,7 @@
             <!-- Breadcrumb -->                            
             <ul class="mt-breadcrumb breadcrumb-style-1">
                 <li><a href="/">Accueil</a></li>
-                <li>About</li>
+                <li>About Us</li>
             </ul> 
         </div>
     </div>
