--- a/src/app/layout/contact/contact.component.html
+++ b/src/app/layout/contact/contact.component.html
@@ -40,7 +40,6 @@
         </div>
         <div class="section-content m-b30">
             <div class="row">
-
                 <!-- <div class="col-md-4 col-sm-12 m-b30">
                     <div class="mt-icon-box-wraper center p-a30 bg-gray">
                         <div class="icon-sm m-b10"><i class="iconmoon-smartphone-1"></i></div>
@@ -54,7 +53,7 @@
                     <div class="mt-icon-box-wraper center p-a30 bg-gray">
                         <div class="icon-sm m-b10"><i class="iconmoon-email"></i></div>
                         <div class="icon-content">
-                            <h4 class="site-text-primary">Email address</h4>
+                            <h4 class="site-text-primary">Email</h4>
                             <p>contact&#64;smacodrc.com</p>
                         </div>
                     </div>
@@ -63,8 +62,8 @@
                     <div class="mt-icon-box-wraper center p-a30 bg-gray">
                         <div class="icon-sm m-b10"><i class="iconmoon-travel"></i></div>
                         <div class="icon-content">
-                            <h4 class="site-text-primary">Address info</h4>
-                            <p>N°608, 07ème Rue , Limete residentiel, Kinshasa</p>
+                            <h4 class="site-text-primary">Adresse physique</h4>
+                            <p>144 B, 30 juin Commune de Gombe Ville Province de Kinshasa</p>
                         </div>
                     </div>
                 </div>
