update company name to include 'sarl' in the description

--- a/src/app/layout/about/what-we-do/what-we-do.component.html
+++ b/src/app/layout/about/what-we-do/what-we-do.component.html
@@ -19,7 +19,7 @@
                     <!-- <p class="text-justify">{{_data.description}}</p> -->
                     
                     <p class="">
-                        La société <strong>« 3S-Security »</strong> est spécialisée dans la sécurité des personnes et des biens. 
+                        La société <strong>« 3S-Security sarl »</strong> est spécialisée dans la sécurité des personnes et des biens. 
                         <br>
                         <br> 
                         Elle exerce dans des secteurs variés tel que: Gardiennage et Surveillance, Protection rapprochée, Événementiel, Accompagnement, Hôtesses, Contrôle d’accès, Télésurveillance & les systèmes d’alarmes. 
