Add meta tags for SEO and update contact email link

--- a/src/app/layout/contact/contact.component.html
+++ b/src/app/layout/contact/contact.component.html
@@ -54,7 +54,7 @@
                         <div class="icon-sm m-b10"><i class="iconmoon-email"></i></div>
                         <div class="icon-content">
                             <h4 class="site-text-primary">Email</h4>
-                            <p>contact&#64;smacodrc.com</p>
+                            <p><a href="mailto:contact@3s-securitydrc.com">contact&#64;3s-securitydrc.com</a> </p>
                         </div>
                     </div>
                 </div>
