Update home page, contact page, about,

--- a/src/app/layout/contact/contact.component.html
+++ b/src/app/layout/contact/contact.component.html
@@ -40,15 +40,16 @@
         </div>
         <div class="section-content m-b30">
             <div class="row">
-                <!-- <div class="col-md-4 col-sm-12 m-b30">
+                <div class="col-md-4 col-sm-12 m-b30">
                     <div class="mt-icon-box-wraper center p-a30 bg-gray">
                         <div class="icon-sm m-b10"><i class="iconmoon-smartphone-1"></i></div>
                         <div class="icon-content">
                             <h4 class="site-text-primary">Phone number</h4>
-                            <p>(+243) 999 925 095</p>
+                            <p><strong>Kinshasa</strong> : (+243) 90 122 63 60 | (+243) 81 222 08 01 | (+243) 84 008 17 28 </p>
+                            <p><strong>Kolwezi</strong> : (+243) 99 113 57 44</p>
                         </div>
                     </div>
-                </div> -->
+                </div>
                 <div class="col-md-4 col-sm-12 m-b30">
                     <div class="mt-icon-box-wraper center p-a30 bg-gray">
                         <div class="icon-sm m-b10"><i class="iconmoon-email"></i></div>
@@ -63,7 +64,8 @@
                         <div class="icon-sm m-b10"><i class="iconmoon-travel"></i></div>
                         <div class="icon-content">
                             <h4 class="site-text-primary">Adresse physique</h4>
-                            <p>144 B, 30 juin Commune de Gombe Ville Province de Kinshasa</p>
+                            <p><strong>Kinshasa</strong> : 144 B, 30 juin Commune de Gombe Ville Province de Kinshasa</p>
+                            <p><strong>Kolwezi</strong> : 26, Kia kabila Dieudonne, Q/ Jolie site, Kolwezi, Ref: Marché Muyej</p>
                         </div>
                     </div>
                 </div>
